# DriftCoder

./: .gitignore  COMMERCIAL_LICENSE.md  DriftCoder.md  LICENSE.md  README.md  SSH_HANDSHAKE_FIX.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  test.txt  test101.txt  test_gtk.py  vite.config.ts
.github/workflows/: android-debug-apk.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/russh-cryptovec/: Cargo.toml
src-tauri/crates/russh-cryptovec/src/platform/: unix.rs
src-tauri/crates/russh-util/: Cargo.toml
src-tauri/crates/russh-util/src/: lib.rs  runtime.rs  time.rs
src-tauri/crates/tauri-plugin-connection-persistence/: Cargo.toml  build.rs
src-tauri/crates/tauri-plugin-connection-persistence/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro  settings.gradle
src-tauri/crates/tauri-plugin-connection-persistence/android/src/main/: AndroidManifest.xml
src-tauri/crates/tauri-plugin-connection-persistence/android/src/main/java/app/tauri/connectionpersistence/: ConnectionPersistencePlugin.kt  ConnectionPersistenceService.kt
src-tauri/crates/tauri-plugin-connection-persistence/src/: desktop.rs  error.rs  lib.rs  mobile.rs
src-tauri/icons/: icon.icns
src-tauri/src/: diagnostics.rs  ipc_error.rs  lib.rs  main.rs  state.rs  trace.rs
src-tauri/src/commands/: android_persistence.rs  connection.rs  debug.rs  filesystem.rs  mod.rs  terminal.rs
src-tauri/src/credentials/: mod.rs  store.rs
src-tauri/src/ssh/: actor.rs  auth.rs  client.rs  known_hosts.rs  mod.rs  pty.rs  runtime.rs  sftp.rs
src/lib/components/connection/: ConnectionForm.svelte  ConnectionList.svelte  ConnectionScreen.svelte
src/lib/components/editor/: EditorHotkeysBar.svelte
src/lib/components/layout/: ConfirmHost.svelte  DiagnosticsModal.svelte  FolderSelect.svelte  MainLayout.svelte  MenuToolbar.svelte  NotificationCenter.svelte  NotificationPopups.svelte  PanelGroup.svelte  ProjectTabs.svelte  PromptModal.svelte  SettingsModal.svelte  StatusBar.svelte  TabBar.svelte
src/lib/components/modals/: ConflictResolutionModal.svelte
src/lib/components/panels/: EditorPanel.svelte  FileTreePanel.svelte  TerminalPanel.svelte
src/lib/components/shared/: Button.svelte  Input.svelte  Modal.svelte
src/lib/components/terminal/: TerminalHotkeysBar.svelte
src/lib/components/workspace/: AddProjectModal.svelte  FolderSelectEmbedded.svelte
src/lib/stores/: confirm.ts  conflict.ts  connection.ts  debug.ts  diagnostics.ts  files.ts  index.ts  layout.ts  notifications.ts  prompt.ts  settings-ui.ts  settings.ts  terminal.ts  workspace.ts
src/lib/types/: index.ts
src/lib/utils/: codemirror-languages.ts  commands.ts  file-tree.ts  languages.ts  ssh-hostkey.ts  storage.ts  tauri.ts  theme.ts
src/routes/: +layout.svelte  +page.svelte
strategy-docs/: implementation-plan_2024-12-31.md  memory-bank.md
