[package]
name = "driftcode"
version = "0.1.0"
description = "Lightweight SSH-based code editor"
authors = ["Jordan Gonzales (Jtech Minds LLC)"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "driftcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.48"
russh-keys = "0.48"
russh-sftp = "2.1"
ssh-key = "0.6"
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
base64 = "0.22"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
keyring = "3"

[profile.release]
lto = true
opt-level = "s"
strip = true

[patch.crates-io]
russh-util = { path = "crates/russh-util" }
russh-cryptovec = { path = "crates/russh-cryptovec" }
