[package]
name = "tauri-plugin-connection-persistence"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "tauri-plugin-connection-persistence"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
